<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_example">
        <menu>
            <item
                android:id="@+id/facebook"
                android:icon="@drawable/icon_facebook"
                android:title="@string/facebook"/>
            <item
                android:id="@+id/twitter"
                android:icon="@drawable/icon_twitter"
                android:title="@string/twitter"/>
            <item
                android:id="@+id/linked_in"
                android:icon="@drawable/icon_linkedin"
                android:title="@string/linked_in"/>
            <item
                android:id="@+id/mail"
                android:icon="@drawable/icon_mail"
                android:title="@string/mail"/>
        </menu>
    </item>

</menu>